Update ExtractRequests.java