@@ -1,1038 +1,989 @@
 import org.w3c.dom.*;
-import javax.xml.parsers.*;
+import javax.xml.parsers.DocumentBuilderFactory;
 import java.io.*;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.*;
 import java.util.*;
 import java.util.stream.Collectors;
 
+/**
+ * FSML Analyzer (single-file, Java 21 compatible, no Swing)
+ *
+ * Outputs:
+ *  - decision-table.csv
+ *  - fsml-rules.html
+ *  - fsml-tree.html
+ *  - gap-analysis.txt
+ *  - shadowed-paths.txt
+ *  - shadow-tree.html
+ *
+ * Notes:
+ *  - LOW/HIGH are mapped to variable min/max only when variable is numeric.
+ *  - NA / NAN are treated as literal categorical values (never parsed as numbers).
+ *  - Shadow detection can optionally ignore NA/NAN dimensions (config flag),
+ *    but DOES NOT drop other constraints (prevents "Rule 1 shadows all" bug).
+ */
 public class FsmlAnalyzerMain {
 
-    /* ======================= MODELS ======================= */
+    /* ============================== CONFIG ============================== */
 
-    static class Bounds {
-        final double min, max;
-        Bounds(double min, double max) { this.min = min; this.max = max; }
+    static boolean IGNORE_NA_FOR_SHADOW = true;
+
+    // Strings treated as NA-like
+    static final Set<String> NA_LIKE = new HashSet<>(Arrays.asList("NA", "N/A", "NAN", "NULL", "NONE"));
+
+    /* ============================== MODEL ============================== */
+
+    static class VarDef {
+        String name;            // ShortName / DecisionKey
+        boolean numeric;
+        double min = -9999999;
+        double max =  9999999;
+        List<String> categories = new ArrayList<>(); // for categorical vars
     }
 
     static class Interval {
-        Double min; boolean minInc;
-        Double max; boolean maxInc;
+        double lo; // inclusive
+        double hi; // exclusive-ish (we store as hi, and keep operator separately when rendering if needed)
+        boolean loInclusive = true;
+        boolean hiInclusive = false; // lt vs le
 
-        Interval(Double min, boolean minInc, Double max, boolean maxInc) {
-            this.min = min; this.minInc = minInc;
-            this.max = max; this.maxInc = maxInc;
+        Interval(double lo, boolean loInc, double hi, boolean hiInc) {
+            this.lo = lo;
+            this.hi = hi;
+            this.loInclusive = loInc;
+            this.hiInclusive = hiInc;
         }
 
-        static Interval universe(Bounds b) {
-            if (b == null) return new Interval(null, true, null, true);
-            return new Interval(b.min, true, b.max, true);
+        static Interval universe(VarDef v) {
+            return new Interval(v.min, true, v.max, true);
         }
 
+        Interval copy() { return new Interval(lo, loInclusive, hi, hiInclusive); }
+
+        // Intersect with other; return null if empty
         Interval intersect(Interval o) {
-            if (o == null) return null;
-
-            Double nMin = this.min;
-            boolean nMinInc = this.minInc;
-
-            if (o.min != null) {
-                if (nMin == null || o.min > nMin) { nMin = o.min; nMinInc = o.minInc; }
-                else if (Objects.equals(o.min, nMin)) { nMinInc = this.minInc && o.minInc; }
+            double nlo = this.lo;
+            boolean nloInc = this.loInclusive;
+            if (o.lo > nlo || (o.lo == nlo && o.loInclusive && !nloInc)) {
+                nlo = o.lo;
+                nloInc = o.loInclusive;
+            } else if (o.lo == nlo) {
+                nloInc = this.loInclusive && o.loInclusive;
             }
 
-            Double nMax = this.max;
-            boolean nMaxInc = this.maxInc;
-
-            if (o.max != null) {
-                if (nMax == null || o.max < nMax) { nMax = o.max; nMaxInc = o.maxInc; }
-                else if (Objects.equals(o.max, nMax)) { nMaxInc = this.maxInc && o.maxInc; }
+            double nhi = this.hi;
+            boolean nhiInc = this.hiInclusive;
+            if (o.hi < nhi || (o.hi == nhi && o.hiInclusive && !nhiInc)) {
+                nhi = o.hi;
+                nhiInc = o.hiInclusive;
+            } else if (o.hi == nhi) {
+                nhiInc = this.hiInclusive && o.hiInclusive;
             }
 
-            // empty check
-            if (nMin != null && nMax != null) {
-                if (nMin > nMax) return null;
-                if (Objects.equals(nMin, nMax) && !(nMinInc && nMaxInc)) return null;
+            // emptiness check
+            if (nlo < nhi) return new Interval(nlo, nloInc, nhi, nhiInc);
+            if (nlo == nhi) {
+                // Single point only valid if both inclusive at boundary
+                if (nloInc && nhiInc) return new Interval(nlo, true, nhi, true);
             }
-            return new Interval(nMin, nMinInc, nMax, nMaxInc);
+            return null;
         }
 
-        boolean covers(Interval o) {
-            if (o == null) return true;
-
-            if (this.min != null) {
-                if (o.min == null) return false;
-                int c = Double.compare(this.min, o.min);
-                if (c > 0) return false;
-                if (c == 0 && !this.minInc && o.minInc) return false;
-            }
-            if (this.max != null) {
-                if (o.max == null) return false;
-                int c = Double.compare(this.max, o.max);
-                if (c < 0) return false;
-                if (c == 0 && !this.maxInc && o.maxInc) return false;
-            }
+        boolean covers(Interval other) {
+            // this superset of other
+            // lower
+            if (this.lo > other.lo) return false;
+            if (this.lo == other.lo && !this.loInclusive && other.loInclusive) return false;
+            // upper
+            if (this.hi < other.hi) return false;
+            if (this.hi == other.hi && !this.hiInclusive && other.hiInclusive) return false;
             return true;
         }
 
-        String asText(String var) {
-            if (min == null && max == null) return var + " = NA";
-            if (min != null && max != null && Objects.equals(min, max) && minInc && maxInc) return var + " = " + fmt(min);
+        boolean overlaps(Interval o) {
+            return this.intersect(o) != null;
+        }
 
-            if (min == null) return var + " " + (maxInc ? "<=" : "<") + " " + fmt(max);
-            if (max == null) return var + " " + (minInc ? ">=" : ">") + " " + fmt(min);
-
-            String left = fmt(min) + " " + (minInc ? "<=" : "<") + " " + var;
-            String right = var + " " + (maxInc ? "<=" : "<") + " " + fmt(max);
-            return left + " AND " + right;
+        String pretty(VarDef v) {
+            String l = (loInclusive ? "[" : "(") + trimNum(lo);
+            String r = trimNum(hi) + (hiInclusive ? "]" : ")");
+            // For display, prefer math style: lo <= x < hi
+            return (loInclusive ? trimNum(lo) + " <= " : trimNum(lo) + " < ")
+                    + v.name + " "
+                    + (hiInclusive ? "<= " : "< ")
+                    + trimNum(hi);
         }
     }
 
-    static class Path {
+    // Constraint per variable can be numeric interval AND/OR categorical equality list
+    static class Constraint {
+        // numeric constraint (interval). If null -> unconstrained numeric.
+        Interval interval;
+        // categorical constraints: list of (op, value). We keep multiple conditions.
+        // Example: eq Active_Other; ne X; etc.
+        List<CatAtom> cat = new ArrayList<>();
+
+        Constraint copy() {
+            Constraint c = new Constraint();
+            c.interval = (this.interval == null ? null : this.interval.copy());
+            c.cat = new ArrayList<>(this.cat);
+            return c;
+        }
+    }
+
+    static class CatAtom {
+        String op;     // eq, ne, etc.
+        String value;  // literal
+        CatAtom(String op, String value) { this.op = op; this.value = value; }
+        @Override public String toString() { return op + " " + value; }
+    }
+
+    static class RulePath {
         int id;
         String action;
-
-        Map<String, Interval> numeric = new LinkedHashMap<>();
-        Map<String, List<String>> categorical = new LinkedHashMap<>();
-
-        boolean invalid;
-
-        Path copy() {
-            Path p = new Path();
-            p.numeric.putAll(this.numeric);
-            for (var e : this.categorical.entrySet()) p.categorical.put(e.getKey(), new ArrayList<>(e.getValue()));
-            p.action = this.action;
-            p.id = this.id;
-            p.invalid = this.invalid;
-            return p;
-        }
+        // maintain insertion order for consistent CSV/HTML
+        LinkedHashMap<String, Constraint> byVar = new LinkedHashMap<>();
+        // optional: original path labels if needed
     }
 
-    /* ======================= STATE ======================= */
+    /* ============================== STATE ============================== */
 
-    static final List<Path> PATHS = new ArrayList<>();
-    static final LinkedHashSet<String> ALL_KEYS = new LinkedHashSet<>();
-    static final Map<String, Bounds> NUM_BOUNDS = new HashMap<>();
-    static final List<String> VARIABLE_ORDER = new ArrayList<>();
+    static final Map<String, VarDef> VARS = new LinkedHashMap<>();
+    static final List<RulePath> PATHS = new ArrayList<>();
 
-    static final List<String> GAP_LINES = new ArrayList<>();
-    static final List<String> SIBLING_OVERLAP_LINES = new ArrayList<>();
-
-    /* Shadow relationships (ignoring NA/NAN for shadow detection only) */
-    static final Map<Integer, List<Integer>> SHADOW_TREE = new LinkedHashMap<>(); // A -> [B...]
-    static final Map<Integer, Integer> SHADOW_PARENT = new HashMap<>();           // B -> A
-
-    /* ======================= XML HELPERS ======================= */
+    /* ============================== XML HELPERS ============================== */
 
     static String localName(Node n) {
+        if (n == null) return null;
         String ln = n.getLocalName();
         if (ln != null) return ln;
         String nn = n.getNodeName();
-        int i = nn.indexOf(':');
-        return i >= 0 ? nn.substring(i + 1) : nn;
+        if (nn == null) return null;
+        int idx = nn.indexOf(':');
+        return idx >= 0 ? nn.substring(idx + 1) : nn;
     }
 
-    static boolean isTag(Node n, String name) {
-        return (n instanceof Element) && name.equalsIgnoreCase(localName(n));
-    }
-
-    static List<Element> children(Element p, String name) {
+    static List<Element> childElements(Element parent) {
         List<Element> out = new ArrayList<>();
-        if (p == null) return out;
-        NodeList nl = p.getChildNodes();
+        if (parent == null) return out;
+        NodeList nl = parent.getChildNodes();
         for (int i = 0; i < nl.getLength(); i++) {
             Node n = nl.item(i);
-            if (isTag(n, name)) out.add((Element) n);
+            if (n instanceof Element e) out.add(e);
         }
         return out;
     }
 
-    static Element firstChild(Element p, String name) {
-        List<Element> c = children(p, name);
-        return c.isEmpty() ? null : c.get(0);
+    static List<Element> children(Element parent, String name) {
+        List<Element> out = new ArrayList<>();
+        for (Element e : childElements(parent)) {
+            if (name.equalsIgnoreCase(localName(e))) out.add(e);
+        }
+        return out;
     }
 
-    static String attr(Element e, String a) {
-        String v = e.getAttribute(a);
-        return v == null ? "" : v;
+    static Element firstChild(Element parent, String name) {
+        for (Element e : children(parent, name)) return e;
+        return null;
     }
 
-    /* ======================= PARSE ORDER + BOUNDS ======================= */
+    static List<Element> allElements(Document doc, String tagName) {
+        List<Element> res = new ArrayList<>();
+        NodeList nl = doc.getElementsByTagName("*");
+        for (int i = 0; i < nl.getLength(); i++) {
+            Node n = nl.item(i);
+            if (n instanceof Element e) {
+                if (tagName.equalsIgnoreCase(localName(e))) res.add(e);
+            }
+        }
+        return res;
+    }
 
-    static void parseVariableOrder(Document doc) {
-        NodeList all = doc.getElementsByTagName("*");
-        for (int i = 0; i < all.getLength(); i++) {
-            Node n = all.item(i);
-            if (isTag(n, "VARIABLE-ORDER")) {
-                String txt = n.getTextContent();
-                if (txt != null) {
-                    String[] parts = txt.split("[,\\s]+");
-                    for (String p : parts) {
-                        String s = p.trim();
-                        if (!s.isEmpty()) VARIABLE_ORDER.add(s);
-                    }
-                }
-                return;
+    /* ============================== PARSING VARS ============================== */
+
+    static void parseVariables(Document doc) {
+        // NumericKey
+        for (Element nk : allElements(doc, "NumericKey")) {
+            String shortName = attr(nk, "ShortName");
+            if (shortName == null || shortName.isBlank()) continue;
+
+            VarDef v = VARS.computeIfAbsent(shortName, k -> {
+                VarDef nv = new VarDef();
+                nv.name = k;
+                return nv;
+            });
+            v.numeric = true;
+
+            Element range = firstChild(nk, "NumericRange");
+            if (range != null) {
+                String minV = attr(range, "minValue");
+                String maxV = attr(range, "maxValue");
+                Double mn = safeDouble(minV);
+                Double mx = safeDouble(maxV);
+                if (mn != null) v.min = mn;
+                if (mx != null) v.max = mx;
+            }
+        }
+
+        // CategoricalKey
+        for (Element ck : allElements(doc, "CategoricalKey")) {
+            String shortName = attr(ck, "ShortName");
+            if (shortName == null || shortName.isBlank()) continue;
+
+            VarDef v = VARS.computeIfAbsent(shortName, k -> {
+                VarDef nv = new VarDef();
+                nv.name = k;
+                return nv;
+            });
+            v.numeric = false;
+
+            for (Element cat : children(ck, "CATEGORY")) {
+                String val = attr(cat, "Value");
+                if (val != null && !val.isBlank()) v.categories.add(val);
             }
         }
     }
 
-    static void parseNumericBounds(Document doc) {
-        NodeList all = doc.getElementsByTagName("*");
-        for (int i = 0; i < all.getLength(); i++) {
-            Node n = all.item(i);
-            if (!isTag(n, "NumericKey")) continue;
-            Element nk = (Element) n;
+    /* ============================== PARSING TREE / PATHS ============================== */
 
-            String key = attr(nk, "ShortName");
-            if (key.isBlank()) key = attr(nk, "LongName");
-            if (key.isBlank()) continue;
+    static void extractAllPaths(Document doc) {
+        Element strategy = null;
+        // Find STRATEGY element (first)
+        for (Element e : allElements(doc, "STRATEGY")) { strategy = e; break; }
+        if (strategy == null) throw new IllegalStateException("No <STRATEGY> found in FSML.");
 
-            Element nr = firstChild(nk, "NumericRange");
-            if (nr == null) continue;
-
-            Double min = safeParseDouble(attr(nr, "minValue"));
-            Double max = safeParseDouble(attr(nr, "maxValue"));
-            if (min != null && max != null) NUM_BOUNDS.put(key, new Bounds(min, max));
+        // Root NODE under strategy
+        Element rootNode = firstChild(strategy, "NODE");
+        if (rootNode == null) {
+            // sometimes there may be wrapper nodes; find first NODE anywhere under STRATEGY
+            List<Element> nodes = children(strategy, "NODE");
+            if (!nodes.isEmpty()) rootNode = nodes.get(0);
         }
-    }
+        if (rootNode == null) throw new IllegalStateException("No <NODE> found under <STRATEGY>.");
 
-    /* ======================= VALUE HANDLING ======================= */
-
-    static boolean isMissingToken(String v) {
-        if (v == null) return true;
-        String t = v.trim();
-        return t.isEmpty() || "NaN".equalsIgnoreCase(t) || "NAN".equalsIgnoreCase(t) || "NA".equalsIgnoreCase(t);
-    }
-
-    static String resolveValue(String key, String rawVal) {
-        if (isMissingToken(rawVal)) return "NA";
-        String v = rawVal.trim();
-
-        if ("LOW".equalsIgnoreCase(v)) {
-            Bounds b = NUM_BOUNDS.get(key);
-            return b == null ? "LOW" : fmt(b.min);
-        }
-        if ("HIGH".equalsIgnoreCase(v)) {
-            Bounds b = NUM_BOUNDS.get(key);
-            return b == null ? "HIGH" : fmt(b.max);
-        }
-        return v;
-    }
-
-    static boolean looksNumeric(String s) {
-        if (s == null) return false;
-        return s.matches("[-+]?\\d+(\\.\\d+)?");
-    }
-
-    static Double safeParseDouble(String s) {
-        if (s == null) return null;
-        String t = s.trim();
-        if (t.isEmpty() || "NaN".equalsIgnoreCase(t)) return null;
-        try { return Double.parseDouble(t); } catch (Exception e) { return null; }
-    }
-
-    static String opSymbol(String op) {
-        if (op == null) return op;
-        if ("lt".equals(op)) return "<";
-        if ("le".equals(op)) return "<=";
-        if ("gt".equals(op)) return ">";
-        if ("ge".equals(op)) return ">=";
-        if ("eq".equals(op)) return "=";
-        if ("ne".equals(op)) return "!=";
-        return op;
-    }
-
-    /* ======================= CONDITION EXTRACTION (nested AND) ======================= */
-
-    static void addCategorical(Path p, String key, String op, String value) {
-        ALL_KEYS.add(key);
-        p.categorical.computeIfAbsent(key, k -> new ArrayList<>()).add(op + ":" + value);
-    }
-
-    static void addNumeric(Path p, String key, Interval local) {
-        ALL_KEYS.add(key);
-
-        Interval base = p.numeric.get(key);
-        if (base == null) {
-            Bounds b = NUM_BOUNDS.get(key);
-            base = (b != null) ? Interval.universe(b) : new Interval(null, true, null, true);
-        }
-
-        Interval merged = base.intersect(local);
-        if (merged == null) { p.invalid = true; return; }
-        p.numeric.put(key, merged);
-    }
-
-    static void extractConditionRecursive(Element condEl, Path p) {
-        String type = attr(condEl, "Type");
-
-        if ("and".equalsIgnoreCase(type)) {
-            for (Element sub : children(condEl, "CONDITION")) extractConditionRecursive(sub, p);
-            return;
-        }
-        if ("true".equalsIgnoreCase(type)) return;
-
-        String key = attr(condEl, "DecisionKey");
-        if (key == null || key.isBlank()) return;
-
-        String rawVal = attr(condEl, "Value");
-        String val = resolveValue(key, rawVal);
-
-        // Missing token: keep literal NA
-        if ("NA".equalsIgnoreCase(val)) {
-            addCategorical(p, key, "eq", "NA");
-            return;
-        }
-
-        // numeric comparators if numeric value
-        if (looksNumeric(val) && ("ge".equals(type) || "gt".equals(type) || "le".equals(type) || "lt".equals(type) || "eq".equals(type))) {
-            Double num = safeParseDouble(val);
-            if (num == null) { addCategorical(p, key, type, val); return; }
-
-            Interval local = null;
-            if ("ge".equals(type)) local = new Interval(num, true, null, true);
-            else if ("gt".equals(type)) local = new Interval(num, false, null, true);
-            else if ("le".equals(type)) local = new Interval(null, true, num, true);
-            else if ("lt".equals(type)) local = new Interval(null, true, num, false);
-            else if ("eq".equals(type)) local = new Interval(num, true, num, true);
-
-            if (local != null) addNumeric(p, key, local);
-            return;
-        }
-
-        // categorical otherwise
-        addCategorical(p, key, type, val);
-    }
-
-    /* ======================= TREE WALK (record ACTION even with children) ======================= */
-
-    static void walkNode(Element node, Path incoming) {
-        if (node == null) return;
-
-        Path cur = incoming.copy();
-
-        for (Element c : children(node, "CONDITION")) {
-            extractConditionRecursive(c, cur);
-            if (cur.invalid) return;
-        }
-
-        // record rule if ACTIONS exists (even if node has children)
-        Element act = firstChild(node, "ACTIONS");
-        if (act != null) {
-            Path rule = cur.copy();
-            rule.action = attr(act, "Label");
-            rule.id = PATHS.size() + 1;
-            PATHS.add(rule);
-        }
-
-        analyzeSiblingSplits(node, cur);
-
-        for (Element k : children(node, "NODE")) walkNode(k, cur);
-    }
-
-    /* ======================= SIBLING SPLIT ANALYSIS ======================= */
-
-    static class KidConstraint {
-        Element kid;
-        String key;
-        Interval interval;
-        KidConstraint(Element kid, String key, Interval interval) { this.kid = kid; this.key = key; this.interval = interval; }
-    }
-
-    static void analyzeSiblingSplits(Element parent, Path parentCtx) {
-        List<Element> kids = children(parent, "NODE");
-        if (kids.size() < 2) return;
-
-        List<KidConstraint> numericKids = new ArrayList<>();
-        for (Element kid : kids) {
-            Path tmp = parentCtx.copy();
-            for (Element c : children(kid, "CONDITION")) extractConditionRecursive(c, tmp);
-            if (tmp.invalid) continue;
-
-            for (var e : tmp.numeric.entrySet()) {
-                String k = e.getKey();
-                Interval childInt = e.getValue();
-
-                Interval parentInt = parentCtx.numeric.get(k);
-                Bounds b = NUM_BOUNDS.get(k);
-                if (parentInt == null) parentInt = (b != null) ? Interval.universe(b) : new Interval(null, true, null, true);
-
-                boolean different = !parentInt.covers(childInt) || !childInt.covers(parentInt);
-                if (different) {
-                    numericKids.add(new KidConstraint(kid, k, childInt));
-                    break;
-                }
-            }
-        }
-
-        if (numericKids.size() < 2) return;
-
-        Map<String, List<KidConstraint>> byKey = numericKids.stream().collect(Collectors.groupingBy(k -> k.key));
-
-        for (var entry : byKey.entrySet()) {
-            String key = entry.getKey();
-            List<KidConstraint> list = entry.getValue();
-            if (list.size() < 2) continue;
-
-            Bounds b = NUM_BOUNDS.get(key);
-            Interval parentRange = parentCtx.numeric.get(key);
-            if (parentRange == null) parentRange = (b != null) ? Interval.universe(b) : new Interval(null, true, null, true);
-
-            List<Interval> union = normalizeUnion(list.stream().map(k -> k.interval).collect(Collectors.toList()));
-            List<Interval> gaps = gapsWithin(parentRange, union);
-
-            if (!gaps.isEmpty()) {
-                GAP_LINES.add("SIBLING GAP under parent NODE Label=\"" + attr(parent,"Label") + "\" key=" + key);
-                GAP_LINES.add("  ParentRange: " + parentRange.asText(key));
-                for (Interval g : gaps) GAP_LINES.add("  GAP: " + g.asText(key));
-                GAP_LINES.add("");
-            }
-
-            List<String> overlaps = new ArrayList<>();
-            for (int i = 0; i < list.size(); i++) {
-                for (int j = i + 1; j < list.size(); j++) {
-                    Interval inter = list.get(i).interval.intersect(list.get(j).interval);
-                    if (inter != null) {
-                        overlaps.add("  OVERLAP child \"" + attr(list.get(i).kid,"Label") + "\" vs \"" + attr(list.get(j).kid,"Label") + "\": "
-                                + inter.asText(key));
-                    }
-                }
-            }
-            if (!overlaps.isEmpty()) {
-                SIBLING_OVERLAP_LINES.add("SIBLING OVERLAPS under parent NODE Label=\"" + attr(parent,"Label") + "\" key=" + key);
-                SIBLING_OVERLAP_LINES.add("  ParentRange: " + parentRange.asText(key));
-                SIBLING_OVERLAP_LINES.addAll(overlaps);
-                SIBLING_OVERLAP_LINES.add("");
-            }
-        }
-    }
-
-    /* ======================= OVERLAP + SHADOW ======================= */
-
-    // Overlap (existence) keeps strict NA semantics (optional). Shadow ignores NA per your request.
-    static boolean overlapExistsStrict(Path a, Path b, List<String> witnessOut) {
-        Set<String> numericKeys = new LinkedHashSet<>();
-        numericKeys.addAll(a.numeric.keySet());
-        numericKeys.addAll(b.numeric.keySet());
-
-        for (String k : numericKeys) {
-            Interval ia = getIntervalOrUniverse(a, k);
-            Interval ib = getIntervalOrUniverse(b, k);
-
-            // Strict: NA treated as categorical equality -> only overlaps if both NA
-            if (hasEqNA(a, k) || hasEqNA(b, k)) {
-                if (!(hasEqNA(a, k) && hasEqNA(b, k))) return false;
-                if (witnessOut != null) witnessOut.add(k + " = NA");
-                continue;
-            }
-
-            Interval inter = ia.intersect(ib);
-            if (inter == null) return false;
-            if (witnessOut != null) witnessOut.add(inter.asText(k));
-        }
-
-        Set<String> catKeys = new LinkedHashSet<>();
-        catKeys.addAll(a.categorical.keySet());
-        catKeys.addAll(b.categorical.keySet());
-
-        for (String k : catKeys) {
-            List<String> pa = a.categorical.getOrDefault(k, List.of());
-            List<String> pb = b.categorical.getOrDefault(k, List.of());
-
-            String eqA = requiredEq(pa);
-            String eqB = requiredEq(pb);
-
-            if ("__CONFLICT__".equals(eqA) || "__CONFLICT__".equals(eqB)) return false;
-
-            if (eqA != null && eqB != null && !eqA.equals(eqB)) return false;
-            if (eqA != null && violatesNe(eqA, pb)) return false;
-            if (eqB != null && violatesNe(eqB, pa)) return false;
-
-            if (witnessOut != null) {
-                if (eqA != null || eqB != null) {
-                    String v = eqA != null ? eqA : eqB;
-                    witnessOut.add(k + " = " + v);
-                }
-            }
-        }
-        return true;
+        RulePath start = new RulePath();
+        start.byVar = new LinkedHashMap<>();
+        walkNode(rootNode, start);
     }
 
     /**
-     * SHADOW COVERAGE ignoring NA:
-     * - If either side has eq:NA for a variable, we ignore that variable for coverage.
-     * - This prevents NA from blocking shadow detection.
+     * Walk the FSML decision tree.
+     * Important fix: Nodes can have:
+     *  - a <CONDITION ...> block containing multiple <CONDITION DecisionKey=...> children (AND)
+     *  - nested nodes, where action can appear even if there are child nodes (we treat as leaf action if present)
      */
-    static boolean coversIgnoringNA(Path a, Path b) {
-        Set<String> keys = new LinkedHashSet<>();
-        keys.addAll(a.numeric.keySet());
-        keys.addAll(b.numeric.keySet());
-        keys.addAll(a.categorical.keySet());
-        keys.addAll(b.categorical.keySet());
+    static void walkNode(Element node, RulePath incoming) {
+        if (node == null) return;
 
-        for (String k : keys) {
-            // If either path has NA on this key, ignore it for shadow logic
-            if (hasEqNA(a, k) || hasEqNA(b, k)) continue;
+        RulePath cur = clonePath(incoming);
 
-            // numeric coverage
-            Interval ia = getIntervalOrUniverse(a, k);
-            Interval ib = getIntervalOrUniverse(b, k);
-            // if b doesn't constrain numeric and a also doesn't, ok
-            // universe covers universe ok
-            if (b.numeric.containsKey(k) || a.numeric.containsKey(k) || NUM_BOUNDS.containsKey(k)) {
+        // A NODE may contain:
+        //   <CONDITION Type="true"/> OR
+        //   <CONDITION DecisionKey="X" Type="and"> <CONDITION .../> <CONDITION .../> </CONDITION>
+        // and/or multiple top-level CONDITION elements.
+        for (Element cond : children(node, "CONDITION")) {
+            applyConditionElement(cond, cur);
+        }
+
+        // If node has ACTIONS, record a rule path (even if it has children)
+        Element act = firstChild(node, "ACTIONS");
+        if (act != null) {
+            String label = attr(act, "Label");
+            if (label == null) label = "";
+            RulePath leaf = clonePath(cur);
+            leaf.action = label.trim();
+            leaf.id = PATHS.size() + 1;
+            PATHS.add(leaf);
+        }
+
+        // Then traverse child nodes
+        List<Element> kids = children(node, "NODE");
+        for (Element k : kids) walkNode(k, cur);
+    }
+
+    static RulePath clonePath(RulePath p) {
+        RulePath np = new RulePath();
+        np.id = p.id;
+        np.action = p.action;
+        np.byVar = new LinkedHashMap<>();
+        for (Map.Entry<String, Constraint> e : p.byVar.entrySet()) {
+            np.byVar.put(e.getKey(), e.getValue().copy());
+        }
+        return np;
+    }
+
+    /**
+     * Apply a CONDITION element.
+     * Handles:
+     *  - <CONDITION Type="true"/> -> no-op
+     *  - <CONDITION DecisionKey="X" Type="and"> <CONDITION DecisionKey="X" Value="LOW" Type="ge"/> ... </CONDITION>
+     *  - <CONDITION DecisionKey="X" Value="3" Type="lt"/>
+     *
+     * We treat nested conditions as conjunction and collect leaf atoms.
+     */
+    static void applyConditionElement(Element cond, RulePath path) {
+        String type = attr(cond, "Type");
+        String key = attr(cond, "DecisionKey");
+        String value = attr(cond, "Value");
+
+        // <CONDITION Type="true"/>
+        if ((key == null || key.isBlank()) && "true".equalsIgnoreCase(type)) return;
+
+        // If this condition has child CONDITION nodes, apply them (AND group)
+        List<Element> nested = children(cond, "CONDITION");
+        if (!nested.isEmpty()) {
+            for (Element c : nested) applyConditionElement(c, path);
+            return;
+        }
+
+        // Leaf atom requires DecisionKey + Type(op) + Value
+        if (key == null || key.isBlank()) return;
+        if (type == null || type.isBlank()) return;
+
+        addAtom(path, key.trim(), type.trim(), value);
+    }
+
+    static void addAtom(RulePath path, String key, String op, String rawValue) {
+        path.byVar.putIfAbsent(key, new Constraint());
+        Constraint c = path.byVar.get(key);
+
+        VarDef v = VARS.get(key);
+        String val = rawValue == null ? "" : rawValue.trim();
+
+        // Preserve NA/NAN literally (do not parse)
+        boolean isNA = isNaLike(val);
+
+        // If var is numeric AND op is a relational AND value looks numeric or LOW/HIGH -> treat as interval constraint
+        boolean relational = isRelational(op);
+        if (v != null && v.numeric && relational && !isNA) {
+            Double num = numericValueFor(v, val);
+            if (num == null) {
+                // fall back to categorical atom if cannot parse
+                c.cat.add(new CatAtom(op, val));
+                return;
+            }
+            Interval local = intervalFromOp(v, op, num);
+            if (local == null) return;
+
+            if (c.interval == null) {
+                c.interval = local;
+            } else {
+                Interval merged = c.interval.intersect(local);
+                if (merged == null) {
+                    // Contradiction in same path; keep as impossible interval
+                    // We'll mark by setting interval to empty sentinel
+                    c.interval = null; // null means unconstrained; but we want "impossible"
+                    // Instead: store a categorical marker:
+                    c.cat.add(new CatAtom("IMPOSSIBLE", key));
+                } else {
+                    c.interval = merged;
+                }
+            }
+        } else {
+            // categorical OR NA/NAN OR unknown var: store as categorical atom
+            if (val.isEmpty()) val = "(empty)";
+            c.cat.add(new CatAtom(op, val));
+        }
+    }
+
+    static boolean isNaLike(String s) {
+        if (s == null) return false;
+        String t = s.trim().toUpperCase(Locale.ROOT);
+        return NA_LIKE.contains(t);
+    }
+
+    static boolean isRelational(String op) {
+        String o = op.toLowerCase(Locale.ROOT);
+        return o.equals("lt") || o.equals("le") || o.equals("gt") || o.equals("ge") || o.equals("eq") || o.equals("ne");
+    }
+
+    static Double numericValueFor(VarDef v, String val) {
+        if (val == null) return null;
+        String t = val.trim();
+        if (t.isEmpty()) return null;
+
+        if ("LOW".equalsIgnoreCase(t)) return v.min;
+        if ("HIGH".equalsIgnoreCase(t)) return v.max;
+
+        // avoid NumberFormatException on empty / NA
+        Double d = safeDouble(t);
+        return d;
+    }
+
+    static Interval intervalFromOp(VarDef v, String op, double num) {
+        String o = op.toLowerCase(Locale.ROOT);
+        Interval universe = Interval.universe(v);
+        if (o.equals("ge")) return universe.intersect(new Interval(num, true, v.max, true));
+        if (o.equals("gt")) return universe.intersect(new Interval(num, false, v.max, true));
+        if (o.equals("lt")) return universe.intersect(new Interval(v.min, true, num, false));
+        if (o.equals("le")) return universe.intersect(new Interval(v.min, true, num, true));
+        if (o.equals("eq")) return universe.intersect(new Interval(num, true, num, true));
+        // ne is hard as interval; keep as categorical atom rather than numeric interval
+        return null;
+    }
+
+    static Double safeDouble(String s) {
+        if (s == null) return null;
+        String t = s.trim();
+        if (t.isEmpty()) return null;
+        if (isNaLike(t)) return null;
+        try {
+            return Double.parseDouble(t);
+        } catch (Exception e) {
+            return null;
+        }
+    }
+
+    static String attr(Element e, String name) {
+        if (e == null) return null;
+        if (!e.hasAttribute(name)) return null;
+        String v = e.getAttribute(name);
+        return v == null ? null : v;
+    }
+
+    /* ============================== DECISION TABLE ============================== */
+
+    static void writeDecisionTableCsv(Path out) throws IOException {
+        // Determine columns: all vars encountered in paths, preserve strategy order if possible
+        LinkedHashSet<String> cols = new LinkedHashSet<>();
+        for (RulePath p : PATHS) cols.addAll(p.byVar.keySet());
+
+        // If FSML has VARIABLE-ORDER, use it to order columns
+        List<String> ordered = extractVariableOrderFromDocIfPossible();
+        if (!ordered.isEmpty()) {
+            LinkedHashSet<String> newCols = new LinkedHashSet<>();
+            for (String k : ordered) if (cols.contains(k)) newCols.add(k);
+            for (String k : cols) newCols.add(k);
+            cols = newCols;
+        }
+
+        List<String> colList = new ArrayList<>(cols);
+
+        try (BufferedWriter bw = Files.newBufferedWriter(out, StandardCharsets.UTF_8)) {
+            // header
+            bw.write("RuleId");
+            for (String c : colList) bw.write("," + csv(c));
+            bw.write(",Action\n");
+
+            for (RulePath p : PATHS) {
+                bw.write(String.valueOf(p.id));
+                for (String c : colList) {
+                    String cell = renderCell(p, c);
+                    bw.write("," + csv(cell));
+                }
+                bw.write("," + csv(p.action));
+                bw.write("\n");
+            }
+        }
+    }
+
+    static String renderCell(RulePath p, String var) {
+        Constraint c = p.byVar.get(var);
+        if (c == null) return ""; // blank instead of ANY
+        VarDef v = VARS.get(var);
+
+        List<String> parts = new ArrayList<>();
+        if (c.interval != null && v != null && v.numeric) {
+            parts.add(c.interval.pretty(v));
+        }
+        if (!c.cat.isEmpty()) {
+            parts.add(c.cat.stream().map(CatAtom::toString).collect(Collectors.joining(" AND ")));
+        }
+        return String.join(" AND ", parts);
+    }
+
+    // best-effort extract VARIABLE-ORDER
+    static List<String> extractVariableOrderFromDocIfPossible() {
+        // We do not keep Document globally; in typical runs, this stays empty.
+        // We'll order by VARS insertion order if variable-order isn't available.
+        return new ArrayList<>(VARS.keySet());
+    }
+
+    static String csv(String s) {
+        if (s == null) return "";
+        boolean need = s.contains(",") || s.contains("\"") || s.contains("\n") || s.contains("\r");
+        if (!need) return s;
+        return "\"" + s.replace("\"", "\"\"") + "\"";
+    }
+
+    /* ============================== GAP ANALYSIS ============================== */
+
+    static void writeGapAnalysis(Path out) throws IOException {
+        try (PrintWriter pw = new PrintWriter(Files.newBufferedWriter(out, StandardCharsets.UTF_8))) {
+            pw.println("FSML GAP ANALYSIS (numeric coverage vs universe)");
+            pw.println("Total rules(paths): " + PATHS.size());
+            pw.println();
+
+            for (VarDef v : VARS.values()) {
+                if (!v.numeric) continue;
+
+                Interval universe = Interval.universe(v);
+                List<Interval> covered = new ArrayList<>();
+
+                for (RulePath p : PATHS) {
+                    Constraint c = p.byVar.get(v.name);
+                    if (c != null && c.interval != null) {
+                        covered.add(c.interval);
+                    } else {
+                        // unconstrained in this rule => covers full universe
+                        covered.add(universe.copy());
+                    }
+                }
+
+                List<Interval> union = unionIntervals(covered);
+                List<Interval> gaps = gapsFromUnion(union, universe);
+
+                pw.println("Variable: " + v.name);
+                pw.println("  Universe: " + universe.pretty(v));
+                pw.println("  Union covered segments: " + union.size());
+                for (Interval u : union) pw.println("    - " + u.pretty(v));
+                pw.println("  Gaps: " + gaps.size());
+                for (Interval g : gaps) pw.println("    * " + g.pretty(v));
+                pw.println();
+            }
+        }
+    }
+
+    static List<Interval> unionIntervals(List<Interval> in) {
+        List<Interval> list = in.stream().filter(Objects::nonNull).sorted((a,b) -> {
+            int c = Double.compare(a.lo, b.lo);
+            if (c != 0) return c;
+            // inclusive before exclusive
+            if (a.loInclusive == b.loInclusive) return 0;
+            return a.loInclusive ? -1 : 1;
+        }).collect(Collectors.toList());
+
+        List<Interval> out = new ArrayList<>();
+        for (Interval cur : list) {
+            if (out.isEmpty()) { out.add(cur.copy()); continue; }
+            Interval last = out.get(out.size()-1);
+
+            // check overlap or adjacency
+            Interval inter = last.intersect(cur);
+            boolean overlap = inter != null;
+            boolean touch = (last.hi == cur.lo) && (last.hiInclusive || cur.loInclusive);
+
+            if (overlap || touch) {
+                // merge by taking min lo of last, max hi of both
+                double nlo = last.lo;
+                boolean nloInc = last.loInclusive;
+
+                double nhi = last.hi;
+                boolean nhiInc = last.hiInclusive;
+                if (cur.hi > nhi || (cur.hi == nhi && cur.hiInclusive && !nhiInc)) {
+                    nhi = cur.hi;
+                    nhiInc = cur.hiInclusive;
+                } else if (cur.hi == nhi) {
+                    nhiInc = last.hiInclusive || cur.hiInclusive;
+                }
+
+                out.set(out.size()-1, new Interval(nlo, nloInc, nhi, nhiInc));
+            } else {
+                out.add(cur.copy());
+            }
+        }
+        return out;
+    }
+
+    static List<Interval> gapsFromUnion(List<Interval> union, Interval universe) {
+        List<Interval> gaps = new ArrayList<>();
+        if (union.isEmpty()) {
+            gaps.add(universe.copy());
+            return gaps;
+        }
+
+        // assume union sorted
+        Interval first = union.get(0);
+        if (first.lo > universe.lo || (first.lo == universe.lo && universe.loInclusive && !first.loInclusive)) {
+            gaps.add(new Interval(universe.lo, universe.loInclusive, first.lo, !first.loInclusive));
+        }
+
+        for (int i=0; i<union.size()-1; i++) {
+            Interval a = union.get(i);
+            Interval b = union.get(i+1);
+            // gap between a.hi and b.lo
+            if (a.hi < b.lo) {
+                gaps.add(new Interval(a.hi, !a.hiInclusive, b.lo, !b.loInclusive));
+            } else if (a.hi == b.lo && !(a.hiInclusive && b.loInclusive)) {
+                // single-point gap if both exclusive at same point
+                gaps.add(new Interval(a.hi, true, b.lo, true));
+            }
+        }
+
+        Interval last = union.get(union.size()-1);
+        if (last.hi < universe.hi || (last.hi == universe.hi && universe.hiInclusive && !last.hiInclusive)) {
+            gaps.add(new Interval(last.hi, !last.hiInclusive, universe.hi, universe.hiInclusive));
+        }
+        return gaps;
+    }
+
+    /* ============================== SHADOW ANALYSIS ============================== */
+
+    static class ShadowEdge {
+        int a; // shadows
+        int b; // shadowed
+        ShadowEdge(int a, int b) { this.a=a; this.b=b; }
+    }
+
+    static void writeShadowAnalysis(Path txtOut, Path htmlTreeOut) throws IOException {
+        // Shadow definition used here:
+        // Rule A shadows Rule B if:
+        //  1) A appears before B (lower id)
+        //  2) For every variable, A covers B (superset)
+        //  3) (optional) while comparing, if IGNORE_NA_FOR_SHADOW and B has eq NA/NAN, ignore that atom for B only.
+        //
+        // This prevents the bug where we accidentally widen A or drop bounds like "< 3".
+        List<ShadowEdge> edges = new ArrayList<>();
+
+        for (int i=0; i<PATHS.size(); i++) {
+            RulePath A = PATHS.get(i);
+            for (int j=i+1; j<PATHS.size(); j++) {
+                RulePath B = PATHS.get(j);
+                if (covers(A, B)) {
+                    edges.add(new ShadowEdge(A.id, B.id));
+                }
+            }
+        }
+
+        // Write txt with full conditions/actions
+        try (PrintWriter pw = new PrintWriter(Files.newBufferedWriter(txtOut, StandardCharsets.UTF_8))) {
+            pw.println("SHADOWED PATHS");
+            pw.println("Definition: A shadows B if A appears before B and A fully covers B in condition space.");
+            pw.println("Ignore NA/NAN for shadow comparison: " + IGNORE_NA_FOR_SHADOW);
+            pw.println("Total rules: " + PATHS.size());
+            pw.println("Total shadow edges: " + edges.size());
+            pw.println();
+
+            // group by shadower
+            Map<Integer, List<Integer>> byA = new LinkedHashMap<>();
+            for (ShadowEdge e : edges) byA.computeIfAbsent(e.a, k -> new ArrayList<>()).add(e.b);
+
+            for (Map.Entry<Integer, List<Integer>> en : byA.entrySet()) {
+                int aId = en.getKey();
+                RulePath A = PATHS.get(aId-1);
+
+                pw.println("Rule " + aId + " shadows " + en.getValue().size() + " rule(s)");
+                pw.println("  ACTION: " + A.action);
+                pw.println("  CONDITIONS:");
+                for (String line : prettyConditions(A)) pw.println("    - " + line);
+                pw.println("  Shadowed:");
+                for (int bId : en.getValue()) {
+                    RulePath B = PATHS.get(bId-1);
+                    pw.println("    * Rule " + bId + " | ACTION: " + B.action);
+                    for (String line : prettyConditions(B)) pw.println("        - " + line);
+                }
+                pw.println();
+            }
+        }
+
+        // Tree HTML
+        writeShadowTreeHtml(htmlTreeOut, edges);
+    }
+
+    static List<String> prettyConditions(RulePath p) {
+        List<String> out = new ArrayList<>();
+        for (Map.Entry<String, Constraint> e : p.byVar.entrySet()) {
+            String k = e.getKey();
+            Constraint c = e.getValue();
+            VarDef v = VARS.get(k);
+            List<String> parts = new ArrayList<>();
+            if (c.interval != null && v != null && v.numeric) parts.add(c.interval.pretty(v));
+            if (!c.cat.isEmpty()) parts.add(c.cat.stream().map(CatAtom::toString).collect(Collectors.joining(" AND ")));
+            if (!parts.isEmpty()) out.add(k + ": " + String.join(" AND ", parts));
+        }
+        return out;
+    }
+
+    static boolean covers(RulePath A, RulePath B) {
+        // compare per variable present in either
+        Set<String> vars = new LinkedHashSet<>();
+        vars.addAll(A.byVar.keySet());
+        vars.addAll(B.byVar.keySet());
+
+        for (String vname : vars) {
+            VarDef vdef = VARS.get(vname);
+            Constraint ca = A.byVar.get(vname);
+            Constraint cb = B.byVar.get(vname);
+
+            // numeric
+            if (vdef != null && vdef.numeric) {
+                Interval ia = (ca != null && ca.interval != null) ? ca.interval : Interval.universe(vdef);
+                Interval ib = (cb != null && cb.interval != null) ? cb.interval : Interval.universe(vdef);
                 if (!ia.covers(ib)) return false;
             }
 
-            // categorical coverage (conservative but useful):
-            // if A requires eq, B must have same eq to be covered
-            String eqA = requiredEq(a.categorical.getOrDefault(k, List.of()));
-            String eqB = requiredEq(b.categorical.getOrDefault(k, List.of()));
-            if ("__CONFLICT__".equals(eqA) || "__CONFLICT__".equals(eqB)) return false;
+            // categorical atoms: we only support a conservative cover check:
+            // A covers B if either:
+            //  - B has no categorical constraints, OR
+            //  - A has the same categorical constraints (or weaker), OR
+            //  - When IGNORE_NA_FOR_SHADOW: if B has eq NA/NAN atoms, ignore those atoms in comparison.
+            List<CatAtom> aCats = (ca == null) ? List.of() : ca.cat;
+            List<CatAtom> bCats = (cb == null) ? List.of() : cb.cat;
 
-            if (eqA != null) {
-                if (eqB == null) return false;
-                if (!eqA.equals(eqB)) return false;
+            List<CatAtom> bFiltered = new ArrayList<>();
+            for (CatAtom atom : bCats) {
+                if (IGNORE_NA_FOR_SHADOW && "eq".equalsIgnoreCase(atom.op) && isNaLike(atom.value)) {
+                    // ignore this NA restriction for shadow comparison only
+                    continue;
+                }
+                bFiltered.add(atom);
             }
 
-            // If A has NE, don't claim coverage (conservative)
-            if (hasNe(a.categorical.getOrDefault(k, List.of()))) return false;
+            // If B requires some categorical atoms, ensure A also has them (same op/value)
+            for (CatAtom req : bFiltered) {
+                boolean found = false;
+                for (CatAtom got : aCats) {
+                    if (got.op.equalsIgnoreCase(req.op) && Objects.equals(got.value, req.value)) {
+                        found = true;
+                        break;
+                    }
+                }
+                if (!found) {
+                    // A does not enforce B's categorical restriction, so A may NOT cover B safely.
+                    return false;
+                }
+            }
         }
         return true;
     }
 
-    static void computeShadowTreeIgnoringNA() {
-        SHADOW_TREE.clear();
-        SHADOW_PARENT.clear();
-
-        // For each rule B, attach it to the FIRST earlier rule A that covers it (ignoring NA)
-        for (int j = 0; j < PATHS.size(); j++) {
-            Path b = PATHS.get(j);
-            Integer parent = null;
-            for (int i = 0; i < j; i++) {
-                Path a = PATHS.get(i);
-                if (coversIgnoringNA(a, b)) { parent = a.id; break; }
-            }
-            if (parent != null) {
-                SHADOW_PARENT.put(b.id, parent);
-                SHADOW_TREE.computeIfAbsent(parent, x -> new ArrayList<>()).add(b.id);
-            }
+    static void writeShadowTreeHtml(Path out, List<ShadowEdge> edges) throws IOException {
+        Map<Integer, List<Integer>> byA = new LinkedHashMap<>();
+        Set<Integer> shadowed = new HashSet<>();
+        for (ShadowEdge e : edges) {
+            byA.computeIfAbsent(e.a, k -> new ArrayList<>()).add(e.b);
+            shadowed.add(e.b);
         }
 
-        // Ensure all shadowing parents exist as keys (even if empty) for tree rendering
-        for (Integer a : new ArrayList<>(SHADOW_TREE.keySet())) {
-            SHADOW_TREE.putIfAbsent(a, SHADOW_TREE.get(a));
-        }
-    }
-
-    static void writeOverlapAndShadowReport(String file) throws Exception {
-        computeShadowTreeIgnoringNA();
-
-        List<String> shadowedLines = new ArrayList<>();
-        for (var e : SHADOW_PARENT.entrySet()) {
-            int bId = e.getKey();
-            int aId = e.getValue();
-            Path a = PATHS.get(aId - 1);
-            Path b = PATHS.get(bId - 1);
-            shadowedLines.add("Rule " + bId + " is SHADOWED by Rule " + aId + " (IGNORING NA). "
-                    + "B.action=\"" + safe(b.action) + "\"  A.action=\"" + safe(a.action) + "\"");
-        }
-
-        // Optionally include overlaps (strict)
-        int overlapCount = 0;
-        for (int i = 0; i < PATHS.size(); i++) {
-            for (int j = i + 1; j < PATHS.size(); j++) {
-                if (overlapExistsStrict(PATHS.get(i), PATHS.get(j), null)) overlapCount++;
-            }
-        }
-
-        try (PrintWriter out = new PrintWriter(new OutputStreamWriter(new FileOutputStream(file), StandardCharsets.UTF_8))) {
-            out.println("TOTAL RULES: " + PATHS.size());
-            out.println("OVERLAPPING RULE PAIRS (STRICT NA SEMANTICS): " + overlapCount);
-            out.println("");
-            out.println("SHADOWED RULES (IGNORING NA/NAN/empty): " + shadowedLines.size());
-            for (String s : shadowedLines) out.println("  " + s);
-            out.println("");
-            out.println("NOTE:");
-            out.println("- Shadow detection here ignores NA/NAN so missing checks do not block coverage/subsumption.");
-            out.println("- If your engine treats NA as a real constraint, strict shadowing may differ.");
-        }
-    }
-
-    /* ======================= RULE VIEW / CONDITIONS RENDER ======================= */
-
-    static List<String> orderedVarsForOutput() {
-        if (!VARIABLE_ORDER.isEmpty()) {
-            List<String> out = new ArrayList<>();
-            for (String v : VARIABLE_ORDER) if (ALL_KEYS.contains(v) || NUM_BOUNDS.containsKey(v)) out.add(v);
-            for (String v : ALL_KEYS) if (!out.contains(v)) out.add(v);
-            return out;
-        }
-        return new ArrayList<>(ALL_KEYS);
-    }
-
-    static List<String> renderConditions(Path p) {
-        List<String> lines = new ArrayList<>();
-
-        for (var e : p.numeric.entrySet()) {
-            String k = e.getKey();
-            if (hasEqNA(p, k)) continue;
-            Interval in = e.getValue();
-            if (in == null) continue;
-
-            Bounds b = NUM_BOUNDS.get(k);
-            if (b != null) {
-                Interval u = Interval.universe(b);
-                if (u.covers(in) && in.covers(u)) continue;
-            }
-            lines.add(in.asText(k));
-        }
-
-        for (var e : p.categorical.entrySet()) {
-            String k = e.getKey();
-            List<String> clauses = e.getValue();
-            if (clauses == null || clauses.isEmpty()) continue;
-
-            String joined = clauses.stream().map(cl -> {
-                String[] parts = cl.split(":", 2);
-                String op = parts[0];
-                String v = parts.length > 1 ? parts[1] : "";
-                return k + " " + opSymbol(op) + " " + v;
-            }).collect(Collectors.joining(" AND "));
-            lines.add(joined);
-        }
-
-        List<String> order = orderedVarsForOutput();
-        Map<String,Integer> idx = new HashMap<>();
-        for (int i=0;i<order.size();i++) idx.put(order.get(i), i);
-        lines.sort(Comparator.comparingInt(s -> idx.getOrDefault(s.split("\\s+",2)[0], Integer.MAX_VALUE)));
-        return lines;
-    }
-
-    /* ======================= OUTPUT: CSV + HTML ======================= */
-
-    static void writeDecisionCsv(String file) throws Exception {
-        List<String> cols = orderedVarsForOutput();
-        try (PrintWriter out = new PrintWriter(new OutputStreamWriter(new FileOutputStream(file), StandardCharsets.UTF_8))) {
-            out.print("RULE_ID");
-            for (String c : cols) out.print("," + c);
-            out.println(",ACTION");
-
-            for (Path p : PATHS) {
-                out.print(p.id);
-                for (String v : cols) {
-                    String cell;
-                    if (p.numeric.containsKey(v) && !hasEqNA(p, v)) {
-                        cell = p.numeric.get(v).asText(v);
-                    } else if (p.categorical.containsKey(v)) {
-                        cell = p.categorical.get(v).stream().map(cl -> {
-                            String[] parts = cl.split(":",2);
-                            String op = parts[0];
-                            String val = parts.length>1?parts[1]:"";
-                            return opSymbol(op) + " " + val;
-                        }).collect(Collectors.joining(" AND "));
-                    } else {
-                        cell = "NA";
-                    }
-                    out.print("," + csvEscape(excelSafe(cell)));
-                }
-                out.println("," + csvEscape(excelSafe(p.action == null ? "NA" : p.action)));
-            }
-        }
-    }
-
-    static void writeRuleHtml(String file) throws Exception {
-        StringBuilder sb = new StringBuilder();
-        sb.append("<html><head><meta charset=\"UTF-8\">");
-        sb.append("<style>");
-        sb.append("body{font-family:Arial;background:#f4f6f8;margin:20px;color:#2c3e50}");
-        sb.append(".hdr{display:flex;gap:16px;align-items:center;flex-wrap:wrap}");
-        sb.append(".pill{background:#fff;border-radius:999px;padding:8px 12px;box-shadow:0 2px 8px rgba(0,0,0,.10)}");
-        sb.append(".grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(520px,1fr));gap:14px;margin-top:14px}");
-        sb.append(".card{background:#fff;border-radius:12px;padding:14px;box-shadow:0 2px 10px rgba(0,0,0,.12)}");
-        sb.append(".title{font-weight:800;font-size:18px;margin-bottom:8px}");
-        sb.append(".cond{margin-left:8px;padding:6px 10px;border-left:4px solid #dfe6e9;margin:6px 0;background:#fafbfc;border-radius:8px}");
-        sb.append(".action{margin-top:10px;font-weight:800;color:#c0392b;background:#fff3cd;border:1px solid #ffeeba;padding:8px 10px;border-radius:10px;display:inline-block}");
-        sb.append(".mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace}");
-        sb.append("</style></head><body>");
-
-        sb.append("<div class='hdr'>");
-        sb.append("<h1 style='margin:0'>FSML Rules Extract</h1>");
-        sb.append("<div class='pill'><b>Total rules:</b> ").append(PATHS.size()).append("</div>");
-        sb.append("<div class='pill'><b>Vars with bounds:</b> ").append(NUM_BOUNDS.size()).append("</div>");
-        sb.append("</div>");
-
-        sb.append("<div class='grid'>");
-        for (Path p : PATHS) {
-            sb.append("<div class='card'>");
-            sb.append("<div class='title'>Rule ").append(p.id).append("</div>");
-
-            List<String> conds = renderConditions(p);
-            for (String c : conds) sb.append("<div class='cond mono'>➜ ").append(esc(c)).append("</div>");
-
-            sb.append("<div class='action'>ACTION → ").append(esc(p.action == null ? "NA" : p.action)).append("</div>");
-            sb.append("</div>");
-        }
-        sb.append("</div></body></html>");
-
-        try (Writer out = new OutputStreamWriter(new FileOutputStream(file), StandardCharsets.UTF_8)) {
-            out.write(sb.toString());
-        }
-    }
-
-    /* ======================= NEW: SHADOW TREE VIEW ======================= */
-
-    static void writeShadowTreeHtml(String file) throws Exception {
-        computeShadowTreeIgnoringNA();
-
-        // roots = rules that shadow others but are not themselves shadowed (or simply all parents)
-        LinkedHashSet<Integer> parents = new LinkedHashSet<>(SHADOW_TREE.keySet());
-        List<Integer> roots = parents.stream().filter(a -> !SHADOW_PARENT.containsKey(a)).collect(Collectors.toList());
-        if (roots.isEmpty()) roots = new ArrayList<>(parents);
+        // roots = rules that shadow others but are not shadowed by anyone
+        List<Integer> roots = byA.keySet().stream().filter(id -> !shadowed.contains(id)).toList();
 
         StringBuilder sb = new StringBuilder();
-        sb.append("<html><head><meta charset='UTF-8'>");
-        sb.append("<style>");
-        sb.append("body{font-family:Arial;background:#f4f6f8;margin:20px;color:#2c3e50}");
-        sb.append(".box{background:#fff;border-radius:14px;padding:16px;box-shadow:0 2px 10px rgba(0,0,0,.12)}");
-        sb.append("details{margin:10px 0}");
-        sb.append("summary{cursor:pointer;font-weight:900}");
-        sb.append(".row{margin:8px 0;padding:10px;border-radius:12px;background:#fafbfc;border-left:5px solid #dfe6e9}");
-        sb.append(".tag{display:inline-block;padding:4px 8px;border-radius:999px;background:#eef2ff;font-weight:800;margin-right:8px}");
-        sb.append(".act{display:inline-block;margin-top:6px;font-weight:900;color:#c0392b;background:#fff3cd;border:1px solid #ffeeba;padding:6px 10px;border-radius:999px}");
-        sb.append(".mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace}");
-        sb.append("</style></head><body>");
+        sb.append("""
+                <!doctype html>
+                <html><head><meta charset="utf-8">
+                <title>FSML Shadow Paths Tree</title>
+                <style>
+                  body{font-family:system-ui,Segoe UI,Arial;margin:24px;background:#0b1020;color:#e8ecff}
+                  h1{margin:0 0 10px 0}
+                  .sub{opacity:.8;margin-bottom:18px}
+                  .card{background:#121a33;border:1px solid #23305a;border-radius:14px;padding:14px;margin:10px 0}
+                  details{background:#0f1730;border:1px solid #23305a;border-radius:12px;padding:10px;margin:8px 0}
+                  summary{cursor:pointer;font-weight:700}
+                  .pill{display:inline-block;padding:2px 10px;border-radius:999px;background:#1b2a55;border:1px solid #2f4283;margin-left:8px;font-size:12px}
+                  .cond{font-family:ui-monospace,Consolas,monospace;font-size:12px;opacity:.95;white-space:pre-wrap}
+                  .action{display:inline-block;margin-top:6px;background:#2b1f14;border:1px solid #60452f;color:#ffd7a8;
+                          padding:6px 10px;border-radius:10px;font-weight:700}
+                </style>
+                </head><body>
+                """);
 
-        sb.append("<h1>Shadow Paths Tree (Ignoring NA)</h1>");
-        sb.append("<div class='box'>");
-        sb.append("<div class='row'><span class='tag'>Definition</span> Rule B is shadowed by Rule A if A fully covers B when we IGNORE NA/NAN constraints.</div>");
-        sb.append("<div class='row'><span class='tag'>Total shadowed</span> ").append(SHADOW_PARENT.size()).append("</div>");
+        sb.append("<h1>Shadow Paths Tree</h1>");
+        sb.append("<div class='sub'>Ignore NA/NAN for shadow comparison: <b>")
+          .append(IGNORE_NA_FOR_SHADOW)
+          .append("</b> | Total rules: <b>")
+          .append(PATHS.size())
+          .append("</b></div>");
 
-        for (Integer r : roots) {
-            sb.append(renderShadowNodeHtml(r, 0));
+        if (roots.isEmpty()) {
+            sb.append("<div class='card'>No shadow relationships detected.</div>");
+        } else {
+            for (int r : roots) {
+                sb.append(renderShadowNodeHtml(r, byA, new HashSet<>()));
+            }
         }
 
-        sb.append("</div></body></html>");
-
-        try (Writer out = new OutputStreamWriter(new FileOutputStream(file), StandardCharsets.UTF_8)) {
-            out.write(sb.toString());
-        }
+        sb.append("</body></html>");
+        Files.writeString(out, sb.toString(), StandardCharsets.UTF_8);
     }
 
-    static String renderShadowNodeHtml(int ruleId, int depth) {
-        Path p = PATHS.get(ruleId - 1);
-        List<Integer> kids = SHADOW_TREE.getOrDefault(ruleId, List.of());
+    static String renderShadowNodeHtml(int id, Map<Integer, List<Integer>> byA, Set<Integer> seen) {
+        if (!seen.add(id)) return ""; // cycle guard
+        RulePath p = PATHS.get(id - 1);
+        List<Integer> kids = byA.getOrDefault(id, List.of());
 
         StringBuilder sb = new StringBuilder();
-        sb.append("<details ").append(depth == 0 ? "open" : "").append(">");
-        sb.append("<summary>Rule ").append(ruleId).append(" (shadows ").append(kids.size()).append(")</summary>");
-
-        sb.append("<div class='row'>");
-        sb.append("<div class='mono'><b>Conditions:</b><br>");
-        for (String c : renderConditions(p)) sb.append("➜ ").append(esc(c)).append("<br>");
-        sb.append("</div>");
-        sb.append("<div class='act'>ACTION → ").append(esc(p.action == null ? "NA" : p.action)).append("</div>");
+        sb.append("<details open><summary>Rule ").append(id)
+                .append("<span class='pill'>shadows ").append(kids.size()).append("</span>")
+                .append("</summary>");
+        sb.append("<div class='action'>ACTION → ").append(escape(p.action)).append("</div>");
+        sb.append("<div class='cond'>");
+        for (String line : prettyConditions(p)) sb.append("• ").append(escape(line)).append("\n");
         sb.append("</div>");
 
-        for (Integer k : kids) {
-            sb.append(renderShadowNodeHtml(k, depth + 1));
-        }
-
+        for (int k : kids) sb.append(renderShadowNodeHtml(k, byA, seen));
         sb.append("</details>");
         return sb.toString();
     }
 
-    static void writeShadowTreeTxt(String file) throws Exception {
-        computeShadowTreeIgnoringNA();
+    /* ============================== HTML OUTPUTS ============================== */
 
-        LinkedHashSet<Integer> parents = new LinkedHashSet<>(SHADOW_TREE.keySet());
-        List<Integer> roots = parents.stream().filter(a -> !SHADOW_PARENT.containsKey(a)).collect(Collectors.toList());
-        if (roots.isEmpty()) roots = new ArrayList<>(parents);
+    static void writeRulesHtml(Path out) throws IOException {
+        StringBuilder sb = new StringBuilder();
+        sb.append("""
+                <!doctype html>
+                <html><head><meta charset="utf-8">
+                <title>FSML Rules Extract</title>
+                <style>
+                  body{font-family:system-ui,Segoe UI,Arial;margin:22px;background:#0b1020;color:#e8ecff}
+                  h1{margin:0 0 10px 0}
+                  .top{display:flex;gap:12px;flex-wrap:wrap;align-items:center;margin-bottom:16px}
+                  .chip{background:#121a33;border:1px solid #23305a;border-radius:999px;padding:8px 12px}
+                  input{padding:10px 12px;border-radius:10px;border:1px solid #23305a;background:#0f1730;color:#e8ecff;min-width:280px}
+                  .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(360px,1fr));gap:12px}
+                  .card{background:#121a33;border:1px solid #23305a;border-radius:16px;padding:14px}
+                  .rule{font-weight:800;font-size:18px}
+                  .cond{margin-top:10px;font-family:ui-monospace,Consolas,monospace;font-size:12px;white-space:pre-wrap}
+                  .action{margin-top:10px;background:#2b1f14;border:1px solid #60452f;color:#ffd7a8;
+                          padding:8px 10px;border-radius:12px;font-weight:800;display:inline-block}
+                  .muted{opacity:.8}
+                </style>
+                </head><body>
+                """);
 
-        try (PrintWriter out = new PrintWriter(new OutputStreamWriter(new FileOutputStream(file), StandardCharsets.UTF_8))) {
-            out.println("SHADOW TREE (Ignoring NA)");
-            out.println("========================");
-            out.println("Total shadowed: " + SHADOW_PARENT.size());
-            out.println("");
-            for (Integer r : roots) dumpShadowTxt(r, out, 0);
+        sb.append("<h1>FSML Rules Extract</h1>");
+        sb.append("<div class='top'>")
+          .append("<div class='chip'>Total rules: <b>").append(PATHS.size()).append("</b></div>")
+          .append("<div class='chip muted'>LOW/HIGH resolved using NumericKey ranges (for numeric vars)</div>")
+          .append("<input id='q' placeholder='Search conditions or action…' oninput='filter()'>")
+          .append("</div>");
+
+        sb.append("<div class='grid' id='grid'>");
+        for (RulePath p : PATHS) {
+            sb.append("<div class='card' data-text='")
+              .append(escapeAttr(("Rule " + p.id + " " + p.action + " " + String.join(" ", prettyConditions(p))).toLowerCase(Locale.ROOT)))
+              .append("'>");
+
+            sb.append("<div class='rule'>Rule ").append(p.id).append("</div>");
+            sb.append("<div class='cond'>");
+            for (String line : prettyConditions(p)) sb.append("→ ").append(escape(line)).append("\n");
+            sb.append("</div>");
+            sb.append("<div class='action'>ACTION → ").append(escape(p.action)).append("</div>");
+            sb.append("</div>");
         }
+        sb.append("</div>");
+
+        sb.append("""
+                <script>
+                  function filter(){
+                    const q=document.getElementById('q').value.toLowerCase().trim();
+                    for(const el of document.querySelectorAll('#grid .card')){
+                      const t=el.getAttribute('data-text');
+                      el.style.display = (!q || t.includes(q)) ? '' : 'none';
+                    }
+                  }
+                </script>
+                </body></html>
+                """);
+
+        Files.writeString(out, sb.toString(), StandardCharsets.UTF_8);
     }
 
-    static void dumpShadowTxt(int ruleId, PrintWriter out, int depth) {
-        Path p = PATHS.get(ruleId - 1);
-        String pad = "  ".repeat(Math.max(0, depth));
-        out.println(pad + "- Rule " + ruleId + "  ACTION: " + safe(p.action));
-        for (String c : renderConditions(p)) out.println(pad + "    * " + c);
-        for (Integer k : SHADOW_TREE.getOrDefault(ruleId, List.of())) dumpShadowTxt(k, out, depth + 1);
-    }
-
-    static void writeShadowTreeDot(String file) throws Exception {
-        computeShadowTreeIgnoringNA();
+    static void writeFsmlTreeHtml(Path out) throws IOException {
+        // Simple tree based on extracted paths: group by action, then show conditions list
+        Map<String, List<RulePath>> byAction = new LinkedHashMap<>();
+        for (RulePath p : PATHS) byAction.computeIfAbsent(p.action, k -> new ArrayList<>()).add(p);
 
         StringBuilder sb = new StringBuilder();
-        sb.append("digraph SHADOW {\n");
-        sb.append("  rankdir=LR;\n");
-        sb.append("  node [shape=box, style=\"rounded,filled\", fillcolor=\"#ffffff\", fontname=\"Arial\"];\n");
-        sb.append("  edge [fontname=\"Arial\"];\n");
+        sb.append("""
+                <!doctype html>
+                <html><head><meta charset="utf-8">
+                <title>FSML Tree View</title>
+                <style>
+                  body{font-family:system-ui,Segoe UI,Arial;margin:22px;background:#0b1020;color:#e8ecff}
+                  h1{margin:0 0 12px 0}
+                  details{background:#121a33;border:1px solid #23305a;border-radius:14px;padding:12px;margin:10px 0}
+                  summary{cursor:pointer;font-weight:800}
+                  .cond{font-family:ui-monospace,Consolas,monospace;font-size:12px;white-space:pre-wrap;margin-top:8px}
+                  .pill{display:inline-block;padding:2px 10px;border-radius:999px;background:#1b2a55;border:1px solid #2f4283;margin-left:8px;font-size:12px}
+                </style>
+                </head><body>
+                """);
 
-        // Nodes
-        for (Path p : PATHS) {
-            if (!SHADOW_TREE.containsKey(p.id) && !SHADOW_PARENT.containsKey(p.id)) continue; // only show shadow-related
-            String label = "Rule " + p.id + "\\n" + (p.action == null ? "NA" : p.action);
-            sb.append("  r").append(p.id).append(" [label=\"").append(dotEsc(label)).append("\"];\n");
-        }
+        sb.append("<h1>FSML Tree View (grouped by Action)</h1>");
+        sb.append("<div>Total rules: <b>").append(PATHS.size()).append("</b></div>");
 
-        // Edges (A -> B)
-        for (var e : SHADOW_TREE.entrySet()) {
-            int a = e.getKey();
-            for (int b : e.getValue()) {
-                sb.append("  r").append(a).append(" -> r").append(b).append(";\n");
+        for (Map.Entry<String, List<RulePath>> e : byAction.entrySet()) {
+            sb.append("<details><summary>")
+              .append(escape(e.getKey()))
+              .append("<span class='pill'>").append(e.getValue().size()).append("</span>")
+              .append("</summary>");
+
+            for (RulePath p : e.getValue()) {
+                sb.append("<details style='margin-left:10px'><summary>Rule ")
+                  .append(p.id).append("</summary><div class='cond'>");
+                for (String line : prettyConditions(p)) sb.append("• ").append(escape(line)).append("\n");
+                sb.append("</div></details>");
             }
+            sb.append("</details>");
         }
 
-        sb.append("}\n");
-
-        try (Writer out = new OutputStreamWriter(new FileOutputStream(file), StandardCharsets.UTF_8)) {
-            out.write(sb.toString());
-        }
+        sb.append("</body></html>");
+        Files.writeString(out, sb.toString(), StandardCharsets.UTF_8);
     }
 
-    /* ======================= GAP HELPERS ======================= */
-
-    static List<Interval> normalizeUnion(List<Interval> intervals) {
-        List<Interval> list = intervals.stream().filter(Objects::nonNull).collect(Collectors.toList());
-        list.sort((a, b) -> {
-            if (a.min == null && b.min == null) return 0;
-            if (a.min == null) return -1;
-            if (b.min == null) return 1;
-            int c = Double.compare(a.min, b.min);
-            if (c != 0) return c;
-            return Boolean.compare(!a.minInc, !b.minInc);
-        });
-
-        List<Interval> merged = new ArrayList<>();
-        for (Interval cur : list) {
-            if (merged.isEmpty()) { merged.add(cur); continue; }
-            Interval last = merged.get(merged.size() - 1);
-
-            boolean overlaps;
-            if (last.max == null || cur.min == null) overlaps = true;
-            else {
-                int cmp = Double.compare(cur.min, last.max);
-                if (cmp < 0) overlaps = true;
-                else if (cmp > 0) overlaps = false;
-                else overlaps = last.maxInc || cur.minInc;
-            }
-
-            if (!overlaps) merged.add(cur);
-            else {
-                if (last.max == null || cur.max == null) { last.max = null; last.maxInc = true; }
-                else {
-                    int cmp = Double.compare(cur.max, last.max);
-                    if (cmp > 0) { last.max = cur.max; last.maxInc = cur.maxInc; }
-                    else if (cmp == 0) last.maxInc = last.maxInc || cur.maxInc;
-                }
-            }
-        }
-        return merged;
-    }
-
-    static List<Interval> gapsWithin(Interval universe, List<Interval> coveredUnion) {
-        List<Interval> gaps = new ArrayList<>();
-        Interval u = universe;
-
-        Double cur = u.min;
-        boolean curInc = u.minInc;
-
-        for (Interval cov : coveredUnion) {
-            Interval c = cov.intersect(u);
-            if (c == null) continue;
-
-            if (c.min != null && cur != null) {
-                int cmp = Double.compare(cur, c.min);
-                if (cmp < 0) gaps.add(new Interval(cur, curInc, c.min, !c.minInc));
-            }
-
-            if (c.max == null) { cur = null; break; }
-            cur = c.max;
-            curInc = c.maxInc;
-        }
-
-        if (cur != null) {
-            Interval tail = new Interval(cur, curInc, u.max, u.maxInc);
-            Interval ok = tail.intersect(u);
-            if (ok != null) gaps.add(ok);
-        }
-
-        return gaps.stream().filter(g -> g.intersect(u) != null).collect(Collectors.toList());
-    }
-
-    static void writeGapAnalysis(String file) throws Exception {
-        List<String> lines = new ArrayList<>();
-
-        for (String var : orderedVarsForOutput()) {
-            Bounds b = NUM_BOUNDS.get(var);
-            if (b == null) continue;
-
-            Interval universe = Interval.universe(b);
-
-            List<Interval> projected = new ArrayList<>();
-            for (Path p : PATHS) {
-                if (hasEqNA(p, var)) continue;
-                Interval in = p.numeric.get(var);
-                if (in == null) in = universe;
-                projected.add(in);
-            }
-
-            List<Interval> covered = normalizeUnion(projected);
-            List<Interval> gaps = gapsWithin(universe, covered);
-
-            lines.add("VARIABLE: " + var + " UNIVERSE: " + universe.asText(var));
-            if (gaps.isEmpty()) lines.add("  GAPS: none (projection)");
-            else {
-                lines.add("  GAPS (projection):");
-                for (Interval g : gaps) lines.add("    - " + g.asText(var));
-            }
-            lines.add("");
-        }
-
-        lines.add("=== SIBLING SPLIT GAPS (tree-accurate) ===");
-        lines.addAll(GAP_LINES);
-        lines.add("");
-        lines.add("=== SIBLING SPLIT OVERLAPS (tree-accurate) ===");
-        lines.addAll(SIBLING_OVERLAP_LINES);
-
-        try (PrintWriter out = new PrintWriter(new OutputStreamWriter(new FileOutputStream(file), StandardCharsets.UTF_8))) {
-            for (String s : lines) out.println(s);
-        }
-    }
-
-    /* ======================= SMALL UTILITIES ======================= */
-
-    static Interval getIntervalOrUniverse(Path p, String k) {
-        Interval in = p.numeric.get(k);
-        if (in != null) return in;
-        Bounds b = NUM_BOUNDS.get(k);
-        return (b != null) ? Interval.universe(b) : new Interval(null, true, null, true);
-    }
-
-    static boolean hasEqNA(Path p, String k) {
-        List<String> preds = p.categorical.get(k);
-        if (preds == null) return false;
-        for (String cl : preds) {
-            String[] parts = cl.split(":",2);
-            if (parts.length == 2 && "eq".equals(parts[0])) {
-                String v = parts[1];
-                if (isMissingToken(v) || "NA".equalsIgnoreCase(v)) return true;
-            }
-        }
-        return false;
-    }
-
-    static String requiredEq(List<String> preds) {
-        String eq = null;
-        for (String cl : preds) {
-            String[] parts = cl.split(":",2);
-            if (parts.length == 2 && "eq".equals(parts[0])) {
-                String v = parts[1];
-                // keep NA in eq; caller decides whether to ignore
-                if (eq == null) eq = v;
-                else if (!eq.equals(v)) return "__CONFLICT__";
-            }
-        }
-        return eq;
-    }
-
-    static boolean violatesNe(String eqValue, List<String> preds) {
-        for (String cl : preds) {
-            String[] parts = cl.split(":",2);
-            if (parts.length == 2 && "ne".equals(parts[0]) && eqValue.equals(parts[1])) return true;
-        }
-        return false;
-    }
-
-    static boolean hasNe(List<String> preds) {
-        for (String cl : preds) if (cl.startsWith("ne:")) return true;
-        return false;
-    }
-
-    static String excelSafe(String s) {
-        if (s == null) return "";
-        if (s.isEmpty()) return s;
-        char c = s.charAt(0);
-        if (c == '=' || c == '+' || c == '-' || c == '@') return "'" + s;
-        return s;
-    }
-
-    static String csvEscape(String s) {
-        if (s == null) return "";
-        String x = s.replace("\"", "\"\"");
-        if (x.contains(",") || x.contains("\"") || x.contains("\n")) return "\"" + x + "\"";
-        return x;
-    }
-
-    static String esc(String s) {
+    static String escape(String s) {
         if (s == null) return "";
         return s.replace("&","&amp;").replace("<","&lt;").replace(">","&gt;");
     }
-
-    static String dotEsc(String s) {
-        if (s == null) return "";
-        return s.replace("\\", "\\\\").replace("\"", "\\\"").replace("\n", "\\n");
+    static String escapeAttr(String s) {
+        return escape(s).replace("\"","&quot;");
     }
 
-    static String safe(String s) { return s == null ? "" : s; }
+    /* ============================== UTILS ============================== */
 
-    static String fmt(double d) {
-        String s = String.format(Locale.US, "%.10f", d);
-        s = s.replaceAll("0+$", "").replaceAll("\\.$", "");
-        return s;
+    static String trimNum(double d) {
+        if (Double.isNaN(d)) return "NaN";
+        if (Double.isInfinite(d)) return d > 0 ? "+Inf" : "-Inf";
+        long l = (long) d;
+        if (Math.abs(d - l) < 1e-9) return String.valueOf(l);
+        return String.valueOf(d);
     }
 
-    /* ======================= MAIN ======================= */
+    /* ============================== MAIN ============================== */
 
     public static void main(String[] args) throws Exception {
-        String fsml = (args.length > 0) ? args[0] : "PenFed_AR_Expert_09042025.fsml";
-
-        DocumentBuilderFactory f = DocumentBuilderFactory.newInstance();
-        f.setNamespaceAware(true);
-        Document doc = f.newDocumentBuilder().parse(new File(fsml));
-
-        parseNumericBounds(doc);
-        parseVariableOrder(doc);
-
-        Element strategy = null;
-        NodeList all = doc.getElementsByTagName("*");
-        for (int i = 0; i < all.getLength(); i++) {
-            Node n = all.item(i);
-            if (isTag(n, "STRATEGY")) { strategy = (Element) n; break; }
+        if (args.length == 0) {
+            System.out.println("Usage: java FsmlAnalyzerMain <file.fsml> [--ignoreNAForShadow=true|false]");
+            return;
         }
-        if (strategy == null) throw new IllegalStateException("No <STRATEGY> found.");
+        String file = args[0];
+        for (String a : args) {
+            if (a.startsWith("--ignoreNAForShadow=")) {
+                IGNORE_NA_FOR_SHADOW = Boolean.parseBoolean(a.substring("--ignoreNAForShadow=".length()));
+            }
+        }
 
-        Element rootNode = firstChild(strategy, "NODE");
-        if (rootNode == null) throw new IllegalStateException("No <NODE> under <STRATEGY>.");
+        DocumentBuilderFactory dbf = DocumentBuilderFactory.newInstance();
+        dbf.setNamespaceAware(true);
+        dbf.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false);
 
-        walkNode(rootNode, new Path());
+        Document doc;
+        try (InputStream in = Files.newInputStream(Paths.get(file))) {
+            doc = dbf.newDocumentBuilder().parse(in);
+        }
 
-        // Outputs
-        writeDecisionCsv("decision-table.csv");
-        writeRuleHtml("fsml-view.html");
-        writeGapAnalysis("gap-analysis.txt");
+        parseVariables(doc);
+        extractAllPaths(doc);
 
-        // Shadow analysis ignoring NA + tree views
-        writeOverlapAndShadowReport("overlap-analysis.txt");
-        writeShadowTreeHtml("shadow-tree.html");
-        writeShadowTreeTxt("shadow-tree.txt");
-        writeShadowTreeDot("shadow-tree.dot");
+        System.out.println("FSML file: " + file);
+        System.out.println("Total paths(rules): " + PATHS.size());
+        System.out.println("Ignore NA/NAN for shadow comparison: " + IGNORE_NA_FOR_SHADOW);
 
-        System.out.println("FSML File: " + fsml);
-        System.out.println("TOTAL RULES: " + PATHS.size());
-        System.out.println("SHADOWED (ignoring NA): " + SHADOW_PARENT.size());
+        // outputs
+        writeDecisionTableCsv(Paths.get("decision-table.csv"));
+        writeRulesHtml(Paths.get("fsml-rules.html"));
+        writeFsmlTreeHtml(Paths.get("fsml-tree.html"));
+        writeGapAnalysis(Paths.get("gap-analysis.txt"));
+        writeShadowAnalysis(Paths.get("shadowed-paths.txt"), Paths.get("shadow-tree.html"));
+
         System.out.println("Generated:");
         System.out.println("  decision-table.csv");
-        System.out.println("  fsml-view.html");
+        System.out.println("  fsml-rules.html");
+        System.out.println("  fsml-tree.html");
         System.out.println("  gap-analysis.txt");
-        System.out.println("  overlap-analysis.txt (includes SHADOW ignoring NA)");
-        System.out.println("  shadow-tree.html (NEW)");
-        System.out.println("  shadow-tree.txt  (NEW)");
-        System.out.println("  shadow-tree.dot  (NEW graphviz)");
+        System.out.println("  shadowed-paths.txt");
+        System.out.println("  shadow-tree.html");
     }
 }
